[gd_scene load_steps=2 format=3 uid="uid://d4k9n7m2q5vu7"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="HealthLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "HP: 3/3"

[node name="DashButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 130.0
text = "DASH (D)"

[node name="BlockButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 140.0
offset_right = 150.0
offset_bottom = 190.0
text = "BLOCK (B)"

[node name="RewindButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 250.0
text = "REWIND (R)"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -35.0
offset_right = 60.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "NEXT LEVEL"

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "RESTART"

[node name="RewindButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 55.0
offset_right = 60.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "REWIND"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 260.0
offset_right = 200.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 18
text = "Level 1: The Awakening"
